# SeaBattle

./: .clang-format  .gitignore  CMakeLists.txt  README.md
backend/: CMakeLists.txt  README.md  RULES.md  main.cpp
backend/src/: main.cpp
backend/src/game/: Board.cpp  Board.hpp  Coordinates.hpp  Player.cpp  Player.hpp  Ship.cpp  Ship.hpp
tests/: CMakeLists.txt
tests/backend_tests/: CMakeLists.txt
